--- a/pom.xml
+++ b/pom.xml
@@ -13,26 +13,24 @@
     <packaging>jar</packaging>
 
     <properties>
-        <java.version>1.7</java.version>
+        <java.version>1.8</java.version>
 
-        <spring.version>3.0.6.RELEASE</spring.version>
-        <spring-batch.version>2.1.8.RELEASE</spring-batch.version>
+        <spring.version>3.2.9.RELEASE</spring.version>
+        <spring-batch.version>2.2.7.RELEASE</spring-batch.version>
         <slf4j.version>1.6.4</slf4j.version>
         <log4j.version>1.2.16</log4j.version>
         <xstream.version>1.4.3</xstream.version>
 
-        <junit.version>4.11</junit.version>
+        <junit.version>4.12</junit.version>
 
         <jacoco.version>0.7.0.201403182114</jacoco.version>
         <jacoco.path>${settings.localRepository}/org/jacoco/org.jacoco.agent/${jacoco.version}/org.jacoco.agent-${jacoco.version}-runtime.jar</jacoco.path>
         <jacoco.utReport>${project.build.directory}/jacoco.exec</jacoco.utReport>
-        <jacoco.itReport>${project.build.directory}/jacoco.itest</jacoco.itReport>
+        <jacoco.itReport>${project.build.directory}/jacoco-it.exec</jacoco.itReport>
         <jacoco.utAgentConfig>-javaagent:${jacoco.path}=destfile=${jacoco.utReport}</jacoco.utAgentConfig>
         <jacoco.itAgentConfig>-javaagent:${jacoco.path}=destfile=${jacoco.itReport}</jacoco.itAgentConfig>
 
-        <jacoco-listeners.version>2.3</jacoco-listeners.version>
-
-        <sonar.jacoco.itReportPath>${jacoco.itReport}</sonar.jacoco.itReportPath>
+        <jacoco-listeners.version>3.5</jacoco-listeners.version>
     </properties>
 
     <build>
@@ -144,7 +142,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.codehaus.sonar-plugins.java</groupId>
+            <groupId>org.sonarsource.java</groupId>
             <artifactId>sonar-jacoco-listeners</artifactId>
             <version>${jacoco-listeners.version}</version>
             <scope>test</scope>
